--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
+/* SITE-HEADER */
 .site-header{
   background-color:#fff;
 
 }
-
+/* SITE-NAV */
 .sitenav-list{
   list-style: none;
 }
@@ -26,6 +27,7 @@
   text-decoration: none;
 }
 
+/* HERO */
 .hero{
   background-color:#252420;
   color: #fff;
@@ -58,6 +60,7 @@
   height: 510px;
 }
 
+/* FEATURES */
 .features ul{
   list-style: none;
 }
@@ -69,6 +72,7 @@
   letter-spacing: 0.5px;
 }
 
+/* FEATURE */
 .feature{
   width: 340px;
 }
@@ -91,6 +95,7 @@
   letter-spacing: 0.5px;
 }
 
+/* SALE */
 .sale{
   background-color: #252420;
   color: #fff;
@@ -122,6 +127,7 @@
   object-fit: cover;
 }
 
+/* SITE-FOOTER */
 .site-footer{
   background-color: #f8f8f8;
 }
