--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,19 @@ body{
 }
 .site-header{
   background-color:#fff;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
 
+.site-header-actions{
+  display: flex;
+  align-items: center;
 }
 /* SITE-NAV */
 .sitenav-list{
   list-style: none;
+  display: flex;
 }
 
 .sitenav-link{
@@ -36,6 +44,9 @@ body{
 .hero{
   background-color:#252420;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .hero-content{
@@ -61,9 +72,6 @@ body{
 }
 
 /* FEATURES */
-.features ul{
-  list-style: none;
-}
 
 .features-heading{
   font-family: "Roboto Condensed","Roboto", "Arial", sans-serif;
@@ -73,6 +81,11 @@ body{
   letter-spacing: 0.5px;
 }
 
+.features-list{
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
 /* FEATURE */
 .feature{
   width: 340px;
@@ -94,6 +107,9 @@ body{
 .sale{
   background-color: #252420;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .sale-content{
@@ -120,14 +136,26 @@ body{
 .site-footer{
   background-color: #f8f8f8;
 }
+.site-footer-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .site-footer ul{
   list-style: none;
 }
 
+.site-footer-socials{
+  display: flex;
+  align-items: center;
+}
 .footer-hr{
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
+}
+.site-footer-bottom{
+  display: flex;
 }
 
 .site-footer-links-list{
