--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body{
   justify-content: space-between;
   display: flex;
   align-items: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-top: 5px solid #ff7500;
 }
 .logo-link{
   transition: opacity 0.4s ease;
@@ -33,6 +36,7 @@ body{
 .sitenav-list{
   list-style: none;
   display: flex;
+  padding: 0;
 }
 
 .sitenav-link{
@@ -56,6 +60,10 @@ body{
 }
 
 .orange-button{
+  display: inline-block;
+  padding: 12px 24px;
+  border-radius: 4px;
+  font-weight: bold;
   font-size: 13px;
   line-height: 15px;
   background-color:#ff7500;
@@ -76,6 +84,8 @@ body{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .hero-content{
@@ -86,6 +96,7 @@ body{
   width: 80px;
   height: 3px;
   background-color: #ff7500;
+  border: 0;
 }
 
 .hero-heading{
@@ -98,10 +109,14 @@ body{
 .hero-img{
   width: 510px;
   height: 510px;
+  border-radius: 8px;
 }
 
 /* FEATURES */
-
+.features{
+  padding-top: 210px;
+  padding-bottom: 210px;
+}
 .features-heading{
   font-family: "Roboto Condensed","Roboto", "Arial", sans-serif;
   width: 440px;
@@ -114,6 +129,7 @@ body{
   display: flex;
   justify-content: space-between;
   list-style: none;
+  padding: 0;
 }
 /* FEATURE */
 .feature{
@@ -121,8 +137,12 @@ body{
 }
 
 .feature-icon-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100px;
   height: 100px;
+  border-radius: 50%;
   background-color:rgba(255, 117, 0, 0.2);
 }
 
@@ -139,6 +159,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-radius: 12px;
 }
 
 .sale-content{
@@ -159,11 +180,14 @@ body{
   width: 440px;
   height: 440px;
   object-fit: cover;
+  border-radius: 12px;
 }
 
 /* SITE-FOOTER */
 .site-footer{
   background-color: #f8f8f8;
+  padding-top: 56px;
+  padding-bottom: 56px;
 }
 .site-footer-top{
   display: flex;
@@ -178,6 +202,7 @@ body{
 .site-footer-socials{
   display: flex;
   align-items: center;
+  padding: 0;
 }
 .site-footer-socials a{
   color: #252420;
@@ -193,6 +218,7 @@ body{
 .footer-hr{
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
+  border: 0;
 }
 .site-footer-bottom{
   display: flex;
@@ -201,6 +227,7 @@ body{
 .site-footer-links-list{
   width: 224px;
   line-height: 19px;
+  padding: 0;
 }
 
 .site-footer-links-list a{
