--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body{
   padding-bottom: 80px;
 }
 
-.hero-content{
+.hero-content {
   width: 390px;
 }
 
@@ -105,12 +105,20 @@ body{
   height: 3px;
   background-color: #ff7500;
   border: 0;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .hero-heading{
   font-family: "Roboto Condensed","Roboto", "Arial", sans-serif;
   font-size: 40px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+.hero-text {
+  margin-top: 0;
+  margin-bottom: 32px;
 }
 
 
@@ -131,17 +139,23 @@ body{
   font-size: 72px;
   line-height: 1.2;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 72px;
 }
 
 .features-list{
   display: flex;
-  justify-content: space-between;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 /* FEATURE */
 .feature{
   width: 340px;
+  margin-right: 40px;
+}
+.feature:last-child{
+  margin-right: 0;
 }
 
 .feature-icon-wrapper{
@@ -178,6 +192,18 @@ body{
   font-family: "Roboto Condensed","Roboto", "Arial", sans-serif;
   font-size: 40px;
   line-height: 48px;
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+.sale-text{
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+.sale-text:last-child{
+  margin-bottom: 0;
+}
+.sale-text-wrapper{
+  margin-bottom: 24px;
 }
 
 .sale-highlight{
@@ -211,7 +237,15 @@ body{
   display: flex;
   align-items: center;
   padding: 0;
+  margin: 0;
 }
+.site-footer-socials li {
+  margin-right: 16px;
+}
+.site-footer-socials li:last-child {
+  margin-right: 0;
+}
+
 .site-footer-socials a{
   color: #252420;
 }
@@ -227,6 +261,8 @@ body{
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
   border: 0;
+  margin-top: 40px;
+  margin-bottom: 64px;
 }
 .site-footer-bottom{
   display: flex;
@@ -236,7 +272,14 @@ body{
   width: 224px;
   line-height: 19px;
   padding: 0;
+  list-style: none;
+  margin: 0;
+  margin-right: 68px;
 }
+.site-footer-links-list:last-child{
+  margin-right: 0;
+}
+
 
 .site-footer-links-list a{
   color: #252420;
